[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "FormaTex"
version = "1.3.0"
description = "Python SDK for the FormaTex LaTeX-to-PDF API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "FormaTex", email = "support@FormaTex.com" }]
keywords = ["latex", "pdf", "FormaTex", "typesetting"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Text Processing :: Markup :: LaTeX",
]

dependencies = ["httpx>=0.25,<1"]

[project.optional-dependencies]
dev = ["pytest>=8", "pytest-cov"]

[project.urls]
Documentation = "https://docs.formatex.io/sdk/python"
Repository = "https://github.com/forma-tex/python-sdk"
Homepage = "https://formatex.io"

[tool.hatch.build.targets.wheel]
packages = ["formatex"]

[tool.pytest.ini_options]
markers = [
  "e2e: end-to-end tests against a live API (require FORMATEX_E2E_BASE_URL)",
]
